--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meeting.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meeting.html
@@ -374,6 +374,32 @@
                                 </el-form-item>
                             </el-col>
                         </el-row>
+                        <el-row class="el-row-h70">
+                            <el-col :span="24">
+                                <el-form-item prop="meetingEnrollStartTime" label="报名开始时间" style="margin:0;">
+                                    <el-date-picker
+                                        style="width:100%;"
+                                        v-model="meetingForm.meetingEnrollStartTime"
+                                        type="datetime"
+                                        value-format="timestamp"
+                                        placeholder="报名入口开放起始时间">
+                                    </el-date-picker>
+                                </el-form-item>
+                            </el-col>
+                        </el-row>
+                        <el-row class="el-row-h70">
+                            <el-col :span="24">
+                                <el-form-item prop="meetingEnrollEndTime" label="报名结束时间" style="margin:0;">
+                                    <el-date-picker
+                                        style="width:100%;"
+                                        v-model="meetingForm.meetingEnrollEndTime"
+                                        type="datetime"
+                                        value-format="timestamp"
+                                        placeholder="报名入口开放终止时间">
+                                    </el-date-picker>
+                                </el-form-item>
+                            </el-col>
+                        </el-row>
                     </div>
                     <el-row class="el-row-h60">
                         <el-col :span="24">
