--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_interaction.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_interaction.html
@@ -149,7 +149,7 @@
                                 <el-tag v-if="scope.row.interactionInfoType == 0">文章</el-tag>
                             </template>
                         </el-table-column>
-                        <el-table-column prop="interactionInfoCrtTime" label="创建时间" width="200"></el-table-column>
+                        <!-- <el-table-column prop="interactionInfoCrtTime" label="创建时间" width="200"></el-table-column> -->
                         
                         <el-table-column label="操作" width="150" fixed="right">
                             <template slot-scope="scope">
@@ -316,7 +316,7 @@
                         </template>
                     </el-table-column>
                     <el-table-column prop="channelTitle" label="频道" width="90"></el-table-column>
-                    <el-table-column prop="newsReleaseTime" label="发布时间" width="95"></el-table-column>
+                    <!-- <el-table-column prop="newsReleaseTime" label="发布时间" width="95"></el-table-column> -->
                     <el-table-column prop="newsAuthor" label="作者"></el-table-column>
                     <el-table-column prop="userName" label="发布人"></el-table-column>
                     <el-table-column prop="newsCount" label="阅读量">
