--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
@@ -65,7 +65,7 @@
                         <el-tag v-if="scope.row.meetingStatus == 1" type="warning">待发布</el-tag>
                         <el-tag v-if="scope.row.meetingStatus == 2" type="success">已发布</el-tag>
                         <el-tag v-if="scope.row.meetingStatus == 3" type="danger">发布失败 </el-tag>
-                        <el-tag v-if="scope.row.meetingStatus == 4" type="warning">待删除</el-tag>
+                        <el-tag v-if="scope.row.meetingStatus == 4" type="warning">待下线</el-tag>
                         <el-tag v-if="scope.row.meetingStatus == 5" type="danger">已删除</el-tag>
                     </template>
                 </el-table-column>
