--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
@@ -226,7 +226,8 @@
                                                         value-format="timestamp"
                                                         start-placeholder="开始时间"
                                                         end-placeholder="结束时间"
-                                                        placeholder="选择时间范围">
+                                                        placeholder="选择时间范围"
+                                                        :clearable="false">
                                                     </el-time-picker>
                                                 </el-form-item>
                                             </el-col>
