--- a/webapps/ROOT/WEB-INF/classes/templates/login.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/login.html
@@ -251,7 +251,7 @@ var vm = new Vue({
                         self.setCookie ('createdit', '', 1)
                         self.setCookie ('createditreport', '', 1)
                         self.setCookie ('createditfastinfo', '', 1)
-                        self.setCookie('userId', result.userId, 1)
+                        // self.setCookie('userId', result.userId, 1)
                         parent.location.href ='index.html';
 					} else {
 						self.$message({
