--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_interaction.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_interaction.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
 
-<title>高清组图管理</title>
+<title>文章问答管理</title>
 </head>
 <body>
     <#include "/header.html">
